# ducmagic

./: CONTRIBUTING.md  README.md  gen_pages.py  mkdocs.yml  pyproject.toml  test.sh  test_speed.sh  test_speed_bash.sh
.github/workflows/: example_run.yml  pylint.yml  python-app.yml
ducmagic/: __init__.py  ducmagic.py  helper.py
nermagic/: nermagic.py
