[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ducmagic"
version = "0.0.1"
description = "A wrapper around Duc"
authors = [
  { name = "Willem Jan Faber", email = "willemjan.faber@kb.nl" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = [
  "cmagic"
]

[project.urls]
"Homepage" = "https://github.com/willemjan/ducmagic"
"Bug Tracker" = "https://github.com/willemjan/ducmagic/issues"

[project.scripts]
ducmagic = "ducmagic:cli"
