[build-system]
requires = ["hatchling", "hatch-fancy-pypi-readme"]
build-backend = "hatchling.build"

[project]
name = "ducmagic"
description = "Dude, what are these bytes? A wrapper around Duc (Dude, where are my bytes)."
version = "0.0.1"
authors = [
  { name = "Willem Jan Faber", email = "willemjan.faber@kb.nl" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = [
  "cmagic"
]

[project.urls]
"Homepage" = "https://github.com/willemjan/ducmagic"
"Bug Tracker" = "https://github.com/willemjan/ducmagic/issues"

[project.scripts]
ducmagic = "ducmagic:cli"
